2012-12-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Resolve some const related problems.
	* str-list.[ch]: Add cstr_list_type and cstr_list_add() for
	const strings.  Define [c]str_list_init() as static inline.
	* kpathsea.c: Move definition of KPATHSEA_CAN_FREE from here ...
	* hash.h: ... to here.
	* hash.[ch]: Define hash_free() only if KPATHSEA_CAN_FREE!=0.
	(hash_lookup): Change return type 'string*' => 'const_string*'.
	* cnf.[ch] (kpathsea_cnf_get, kpse_cnf_get):
	Change return type 'string*' => 'const_string*'.
	* dir.c (kpathsea_dir_links): Adapt.
	* rm-suffix.c (remove_suffix): Adapt.
	* db.c, fontmap.c: Remove casts 'string*' => 'const_string*'.	

2012-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.c: Remove look_for_cmd().

2012-12-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: remove look_for_cmd().

2012-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.c (look_for_cmd): Do not compute unused value.
	* win32lib.c (look_for_cmd, kpathsea_win32_popen): Same.

2012-11-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.cnf: Increase main_memory, font_mem_size, hash_extra,
	and pool_size.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.c: use stat in static int is_dir ().

2012-10-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: use stat in static int is_dir ().

2012-10-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: remove _osver since it is obsolete.

2012-09-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.h: remove definition of mkdir.
	* c-proto.h: introduce NO_KPSE_DLL as in getopt.h.

2012-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-std.h: Define M_PI if not defined by <math.h> (old MSVC).

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../am/bin_links.am.

2012-08-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
